finalisation de la partie Frontend du project Oragon (Gestionnaire de projects)

--- a/src/components/PresentationComponent/phome/home.css
+++ b/src/components/PresentationComponent/phome/home.css
@@ -1,5 +1,5 @@
 .homeContainer{
-    background-image: url('../../Assets/imgBackground.jpg');
+    background-image: url('/bgImg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
