--- a/src/components/PresentationComponent/pnavbar/navbar.css
+++ b/src/components/PresentationComponent/pnavbar/navbar.css
@@ -1,6 +1,38 @@
+/* .optionContainer .Liactve::after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: aqua;
+  position: absolute;
+} */
+
+.optionContainer li {
+  position: relative;
+  padding: 5px 5px;
+  cursor: pointer;
+}
+
+.optionContainer li::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 3px;
+  background-color: #249ae9; /* Couleur de la ligne */
+  transition: width 0.15s ease-in-out;
+}
+
+.optionContainer li:hover::after {
+  width: 100%;
+}
+.optionContainer .theActive::after {
+  width: 100%;
+}
+
 @media (max-width:768px){
     .navbarResponsive{
-      @apply absolute flex-col min-h-screen w-[80%] p-10 left-0 duration-200 top-[65px] bg-slate-300
+      @apply absolute flex-col min-h-screen w-[80%] p-10 left-0 duration-200 top-[65px] bg-white
     }
     .activer{
         @apply -left-[85%] duration-200 z-50
