--- a/index.css
+++ b/index.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+#root{
+    font-family: "Inter", sans-serif;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
